[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/world/actors/characters/character.gd" type="Script" id=1]

[sub_resource type="CapsuleShape" id=1]

radius = 1.0
height = 3.0

[sub_resource type="CapsuleMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 1.0
mid_height = 3.0
radial_segments = 64
rings = 8

[sub_resource type="CubeMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector3( 0.1, 0.1, 2 )
subdivide_width = 0
subdivide_height = 0
subdivide_depth = 0

[sub_resource type="BoxShape" id=4]

extents = Vector3( 1, 2.5, 1 )

[node name="player" type="KinematicBody" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Transform" ]

[node name="CollisionShape" type="CollisionShape" parent="." index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape" index="0"]

layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null

[node name="camera_anchor" type="Position3D" parent="." index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.71186, 0 )
_sections_unfolded = [ "Transform" ]

[node name="item_anchor" type="Position3D" parent="camera_anchor" index="0"]

editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.343117, -0.574742, -1.65553 )
_sections_unfolded = [ "Transform" ]

[node name="test_stick" type="MeshInstance" parent="camera_anchor/item_anchor" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.822217 )
visible = false
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform" ]

[node name="pick_up_area" type="Area" parent="." index="2"]

editor/display_folded = true
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="pick_up_area" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0734683, 0 )
shape = SubResource( 4 )
disabled = false

[connection signal="area_entered" from="pick_up_area" to="." method="_on_pick_up_area_area_entered"]


